--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,15 @@
 @import url('../vendor/normalize.css');
 @import url('../vendor/fonts/fonts.css');
 @import url('../blocks/page/page.css');
+@import url('../blocks/content/content.css');
+@import url('../blocks/header/header.css');
+@import url('../blocks/header/__logo/header__logo.css');
+@import url('../blocks/profile/profile.css');
+@import url('../blocks/profile/__avatar/profile__avatar.css');
+@import url('../blocks/profile/__info/profile__info.css');
+@import url('../blocks/profile/__info-placeholder/profile__info-placeholder.css');
+@import url('../blocks/profile/__name/profile__name.css');
+@import url('../blocks/profile/__title/profile__title.css');
+@import url('../blocks/profile/__edit-button/profile__edit-button.css');
+@import url('../blocks/profile/__add-button-rectangle/profile__add-button-rectangle.css');
+@import url('../blocks/uikit-plus/uikit-plus.css');
