--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,6 +4,10 @@
   align-self: flex-end;
 }
 
+.profile__edit-button:hover {
+  opacity: 0.6;
+}
+
 @media screen and (min-width: 768px) {
   .profile__edit-button {
     width: 24px;
