сделал футер, fix horizontal scroll

--- a/pages/index.css
+++ b/pages/index.css
@@ -19,3 +19,5 @@
 @import url('../blocks/photo-grid/__name-block/photo-grid__name-block.css');
 @import url('../blocks/photo-grid/__name/photo-grid__name.css');
 @import url('../blocks/photo-grid/__like-button/photo-grid__like-button.css');
+@import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/__copyright/footer__copyright.css');
