--- a/blocks/photo-grid/__name/photo-grid__name.css
+++ b/blocks/photo-grid/__name/photo-grid__name.css
@@ -3,5 +3,26 @@
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
-  line-height: 29px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 210px;
+}
+
+@media screen and (min-width: 634px) and (max-width: 768px) {
+  .photo-grid__name {
+    max-width: 220px;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 879px) {
+  .photo-grid__name {
+    max-width: 325px;
+  }
+}
+
+@media screen and (min-width: 880px) {
+  .photo-grid__name {
+    max-width: 210px;
+  }
 }
