--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,5 @@
 .popup__input {
+  display: block;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -7,6 +8,7 @@
   height: 27px;
   margin: 0 auto 30px;
   padding-bottom: 12px;
+  border: none;
   border-bottom: 1px solid rgba(0,0,0,0.2);
   box-sizing: border-box; 
 }
@@ -14,6 +16,14 @@
 .popup__input:last-of-type {
   margin: 0 auto 45px;
 }
+
+
+.popup__input:focus {
+  outline-color: lightblue;
+  outline-style: solid;
+  outline-width: 2px;
+  border-radius: 2px;
+ }
 
 @media screen and (min-width: 634px) {
   .popup__input {
