--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,7 +4,10 @@
   grid-template-columns: 1fr;
   row-gap: 20px;
   column-gap: 17px;
+  margin: 0;
   margin-bottom: 48px;
+  padding: 0;
+  list-style: none;
 }
 
 @media screen and (min-width: 634px) {
