--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -4,6 +4,8 @@
   margin: 0 22px 25px;
   background-color: rgb(0,0,0);
   border-radius: 2px;
+  cursor: pointer;
+  border: none;
 }
 
 .popup__button:hover {
