--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,10 @@
 .profile__edit-button {
   width: 18px;
   height: 18px;
-  align-self: flex-end;
+  cursor: pointer;
+  border: none;
+  padding: 0; 
+  background-color: black; 
 }
 
 .profile__edit-button:hover {
