--- a/blocks/profile/__info-placeholder/profile__info-placeholder.css
+++ b/blocks/profile/__info-placeholder/profile__info-placeholder.css
@@ -7,6 +7,7 @@
   column-gap: 10px;
   row-gap: 14px;
   justify-items: center;
+  align-items: center;
   grid-template-areas: 
   "name button"
   "title .";
