--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -6,12 +6,16 @@
   color: #FFF;
   margin: 0;
   padding: 0;
+  text-overflow: ellipsis;
   white-space: nowrap;
+  overflow: hidden;
+  max-width: 193px;
 }
 
 @media screen and (min-width: 768px) {
   .profile__name {
     font-size: 42px;
     line-height: 1.14;
+    max-width: 294px;
   }
 }
