--- a/blocks/profile/__uikit-plus/profile__uikit-plus.css
+++ b/blocks/profile/__uikit-plus/profile__uikit-plus.css
@@ -1,10 +1,10 @@
-.uikit-plus {
+.profile__uikit-plus {
   width: 16px;
   height: 16px;
 }
 
 @media screen and (min-width: 768px) {
-  .uikit-plus {
+  .profile__uikit-plus {
     width: 22px;
     height: 22px;
   }
