--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,7 @@
 @import url('../blocks/photo-grid/__name/photo-grid__name.css');
 @import url('../blocks/photo-grid/__uikit-like/photo-grid__uikit-like.css');
 @import url('../blocks/photo-grid/__uikit-like/_active/photo-grid__uikit-like_active.css');
+@import url('../blocks/photo-grid/__uikit-trash/photo-grid__uikit-trash.css');
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
 @import url('../blocks/popup/popup.css');
@@ -32,3 +33,7 @@
 @import url('../blocks/popup/__input/popup__input.css');
 @import url('../blocks/popup/__button/popup__button.css');
 @import url('../blocks/popup/__button-text/popup__button-text.css');
+@import url('../blocks/popup/__container-image/popup__container-image.css');
+@import url('../blocks/popup/__caption/popup__caption.css');
+@import url('../blocks/popup/__image/popup__image.css');
+@import url('../blocks/popup/_role/popup_role_show-image.css')
