--- a/blocks/photo-grid/__uikit-like/_active/photo-grid__uikit-like_active.css
+++ b/blocks/photo-grid/__uikit-like/_active/photo-grid__uikit-like_active.css
@@ -1,3 +1,3 @@
 .photo-grid__uikit-like_active {
-  background-image: url('../../../images/UIkit/like-active.svg');
+  background-image: url('../../../../images/UIkit/like-active.svg');
 }
