--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,8 @@
 .popup {
-  display: none;
+  display: flex;
+  visibility: hidden;
+  transition: visibility 0.2s, opacity 0.2s ease-in-out;
+  opacity: 0;
   position: fixed;
   top: 0;
   left: 0;
