--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,6 +1,6 @@
 .photo-grid__item {
   position: relative;
-  width: 282px;
+  width: 100%;
   margin: 0 auto;
   background-color: #fff;
   border-radius: 10px;
