fix: поправил по всем комментам ревьюера, кроме ломающейся верстки карточки при добавлении битой ссылки

--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,5 +1,7 @@
 .photo-grid__item {
   position: relative;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   margin: 0 auto;
   background-color: #fff;
