--- a/pages/index.css
+++ b/pages/index.css
@@ -31,9 +31,17 @@
 @import url('../blocks/popup/__container/popup__container.css');
 @import url('../blocks/popup/__heading/popup__heading.css');
 @import url('../blocks/popup/__input/popup__input.css');
+@import url('../blocks/popup/__input/_type/popup__input_type_error.css');
+@import url('../blocks/popup/__input-error/popup__input-error.css');
+@import url('../blocks/popup/__input-error/_active/popup__input-error_active.css');
 @import url('../blocks/popup/__button/popup__button.css');
+@import url('../blocks/popup/__button/_disabled/popup__button_disabled.css');
 @import url('../blocks/popup/__button-text/popup__button-text.css');
+@import url('../blocks/popup/__button-text/_disabled/popup__button-text_disabled.css');
 @import url('../blocks/popup/__container-image/popup__container-image.css');
 @import url('../blocks/popup/__caption/popup__caption.css');
 @import url('../blocks/popup/__image/popup__image.css');
-@import url('../blocks/popup/_role/popup_role_show-image.css')
+@import url('../blocks/popup/_role/popup_role_show-image.css');
+@import url('../blocks/popup/__first-input-error/popup__first-input-error.css');
+@import url('../blocks/popup/__second-input-error/popup__second-input-error.css');
+@import url('../blocks/popup/__input-field/popup__input-field.css');
