--- a/blocks/popup/__button/_disabled/popup__button_disabled.css
+++ b/blocks/popup/__button/_disabled/popup__button_disabled.css
@@ -1,6 +1,7 @@
 .popup__button_disabled {
   border: 1px solid #000000;
   background-color: white;
+  color: black;
   opacity: .2;
   pointer-events: none;
   user-select: none;
