--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -6,6 +6,12 @@
   border-radius: 2px;
   cursor: pointer;
   border: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  color: #fff;
 }
 
 .popup__button:hover {
@@ -17,5 +23,7 @@
     width: 358px;
     height: 50px;
     margin: 0 36px 37px;
+    font-size: 18px;
+    line-height: 12px;
   }
 }
